tests/rosetta/out/Rust/abbreviations-easy.error
rustc: exit status 1
error[E0308]: mismatched types
 --> /tmp/abbreviations-easy.rs:8:41
  |
8 |             let ch = &s[i as usize..i + 1 as usize];
  |                                         ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
 --> /tmp/abbreviations-easy.rs:8:37
  |
8 |             let ch = &s[i as usize..i + 1 as usize];
  |                                     ^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
 --> /tmp/abbreviations-easy.rs:8:39
  |
8 |             let ch = &s[i as usize..i + 1 as usize];
  |                                       ^ no implementation for `i32 + usize`
  |
  = help: the trait `Add<usize>` is not implemented for `i32`
  = help: the following other types implement trait `Add<Rhs>`:
            `&i32` implements `Add<i32>`
            `&i32` implements `Add`
            `i32` implements `Add<&i32>`
            `i32` implements `Add`

error[E0308]: mismatched types
  --> /tmp/abbreviations-easy.rs:12:69
   |
12 |                     words = { let mut tmp = words.clone(); tmp.push(cur); tmp };
   |                                                                ---- ^^^ expected `&str`, found `String`
   |                                                                |
   |                                                                arguments to this method are incorrect
   |
note: method defined here
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/alloc/src/vec/mod.rs:2442:12
help: consider borrowing here
   |
12 |                     words = { let mut tmp = words.clone(); tmp.push(&cur); tmp };
   |                                                                     +

error[E0308]: mismatched types
  --> /tmp/abbreviations-easy.rs:13:27
   |
5  |         let mut cur = String::new();
   |                       ------------- expected due to this value
...
13 |                     cur = "";
   |                           ^^- help: try using a conversion method: `.to_string()`
   |                           |
   |                           expected `String`, found `&str`

error[E0308]: mismatched types
  --> /tmp/abbreviations-easy.rs:21:61
   |
21 |             words = { let mut tmp = words.clone(); tmp.push(cur); tmp };
   |                                                        ---- ^^^ expected `&str`, found `String`
   |                                                        |
   |                                                        arguments to this method are incorrect
   |
note: method defined here
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/alloc/src/vec/mod.rs:2442:12
help: consider borrowing here
   |
21 |             words = { let mut tmp = words.clone(); tmp.push(&cur); tmp };
   |                                                             +

error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
  --> /tmp/abbreviations-easy.rs:29:13
   |
29 |             out += " ";
   |             ---^^^^^^^
   |             |
   |             cannot use `+=` on type `&str`

error[E0308]: mismatched types
  --> /tmp/abbreviations-easy.rs:44:16
   |
34 |     fn join(xs: Vec<&'static str>, sep: &'static str) -> &'static str {
   |                                                          ------------ expected `&'static str` because of return type
...
44 |         return res;
   |                ^^^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
44 |         return &res;
   |                +

error[E0425]: cannot find function `upper` in this scope
  --> /tmp/abbreviations-easy.rs:60:29
   |
60 |                     let c = upper(cmd);
   |                             ^^^^^ not found in this scope

error[E0425]: cannot find function `upper` in this scope
  --> /tmp/abbreviations-easy.rs:61:30
   |
61 |                     let ww = upper(w);
   |                              ^^^^^ not found in this scope

error[E0308]: mismatched types
  --> /tmp/abbreviations-easy.rs:79:31
   |
79 |         let commands = fields(table);
   |                        ------ ^^^^^ expected `&str`, found `String`
   |                        |
   |                        arguments to this function are incorrect
   |
note: function defined here
  --> /tmp/abbreviations-easy.rs:3:8
   |
3  |     fn fields(s: &'static str) -> Vec<&'static str> {
   |        ^^^^^^ ---------------
help: consider borrowing here
   |
79 |         let commands = fields(&table);
   |                               +

error[E0308]: mismatched types
  --> /tmp/abbreviations-easy.rs:87:47
   |
87 |                 let ch = &cmd[j as usize..j + 1 as usize];
   |                                               ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
  --> /tmp/abbreviations-easy.rs:87:43
   |
87 |                 let ch = &cmd[j as usize..j + 1 as usize];
   |                                           ^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/abbreviations-easy.rs:87:45
   |
87 |                 let ch = &cmd[j as usize..j + 1 as usize];
   |                                             ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error: aborting due to 14 previous errors

Some errors have detailed explanations: E0277, E0308, E0368, E0425.
For more information about an error, try `rustc --explain E0277`.
